modules/network/private_subnet.tf
resource "aws_subnet" "private-subnet" {

  count             = length(var.private_cird_block)
  vpc_id            = aws_vpc.default.id
  cidr_block        = element(var.private_cird_block, count.index + 1)
  availability_zone = element(var.azs, count.index)


  tags = {
    Name        = "${var.vpc_name}-private-subnet-${count.index + 1}"
    Owner       = local.Owner
    costCenter  = local.costCenter
    TeamDL      = local.TeamDL
    environment = "${var.environment}"
  }
}
